--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,7 @@
   .intro {
     .header-img{
       border-radius: 5px;
+      padding-top: 11.5%; 
 
       @media @phone{
         width: 100%;
